[tool.poetry]
name = "aiforia-pathology"
version = "0.1.0"
description = "Knowledge graph build using OntoWeaver"
authors = ["Johann Dreo <johann.dreo@pasteur.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
biocypher = "^0.6.0"
pooch = "^1.7.0"
pandas = "^2.0.1"
owlready2 = "^0.46"
pyarrow = "^16.1.0"
# ontoweaver = "^0.1.0"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
